GNOME Bugzilla – Bug 676334
scroll-actor: Fix ->transition not being reset
Last modified: 2012-05-18 16:44:13 UTC
.
Created attachment 214389 [details] [review] scroll-actor: Fix ->transition not being reset When the transition was removed from the scroll-actor manually, to cancel a not-finished animation, the transition struct member wasn't reset to NULL. This fixes this problem, and removes the need for the struct member to be reset manually when animation has completed.
Review of attachment 214389 [details] [review]: looks good